--- a/QProxy/QProxy.csproj
+++ b/QProxy/QProxy.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Http\HttpHeader.cs" />
     <Compile Include="Http\HttpHeaderItem.cs" />
     <Compile Include="Http\HttpPackage.cs" />
-    <Compile Include="Http\HttpParser.cs" />
+    <Compile Include="HttpAcceptor.cs" />
     <Compile Include="Http\HttpRequestHeader.cs" />
     <Compile Include="Http\HttpResponseHeader.cs" />
     <Compile Include="Http\HttpsStream.cs" />
@@ -54,9 +54,12 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Repeater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transporter.cs" />
+    <Compile Include="HttpPackageStream.cs" />
     <Compile Include="Http\_Constants.cs" />
     <Compile Include="_Constants.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Configuration\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
