--- a/QProxy/QProxy.csproj
+++ b/QProxy/QProxy.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Q\Logger.cs" />
     <Compile Include="Repeater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="HttpPackageStream.cs" />
+    <Compile Include="HttpStream.cs" />
     <Compile Include="Http\_Constants.cs" />
     <Compile Include="_Constants.cs" />
   </ItemGroup>
