--- a/QProxy/QProxy.csproj
+++ b/QProxy/QProxy.csproj
@@ -40,22 +40,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Q\CAHelper.cs" />
-    <Compile Include="DnsHelper.cs" />
+    <Compile Include="Net\DnsHelper.cs" />
     <Compile Include="EncryptionProvider.cs" />
     <Compile Include="HttpRepeater.cs" />
-    <Compile Include="Http\HttpContent.cs" />
-    <Compile Include="Http\HttpHeader.cs" />
-    <Compile Include="Http\HttpHeaderItem.cs" />
-    <Compile Include="Http\HttpPackage.cs" />
-    <Compile Include="Http\HttpRequestHeader.cs" />
-    <Compile Include="Http\HttpResponseHeader.cs" />
-    <Compile Include="Http\HttpsConnector.cs" />
+    <Compile Include="Net\Http\HttpContent.cs" />
+    <Compile Include="Net\Http\HttpHeader.cs" />
+    <Compile Include="Net\Http\HttpHeaderItem.cs" />
+    <Compile Include="Net\Http\HttpPackage.cs" />
+    <Compile Include="Net\Http\HttpRequestHeader.cs" />
+    <Compile Include="Net\Http\HttpResponseHeader.cs" />
+    <Compile Include="Net\Http\HttpsConnector.cs" />
     <Compile Include="Listener.cs" />
     <Compile Include="Q\Logger.cs" />
     <Compile Include="Repeater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="HttpStream.cs" />
-    <Compile Include="Http\_Constants.cs" />
+    <Compile Include="Net\Http\HttpStream.cs" />
+    <Compile Include="Net\Http\_Constants.cs" />
     <Compile Include="_Constants.cs" />
   </ItemGroup>
   <ItemGroup>
