--- a/HttpStreamHandler/Web.config
+++ b/HttpStreamHandler/Web.config
@@ -6,7 +6,7 @@
   </system.web>
   <system.webServer>
     <handlers>
-      <add name="EndPointHandler" path="/endpoint" verb="*" type="Q.Net.Web.EndPointHandler, Q.Net.Web" />
+      <add name="HttpStreamHandler" path="/httpstream" verb="*" type="Q.Net.Web.HttpStreamHandler" />
     </handlers>
   </system.webServer>
 </configuration>
