--- a/QProxy/QProxy.csproj
+++ b/QProxy/QProxy.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Net\PipeStream.cs" />
+    <Compile Include="Net\Http\HttpTunnelStream.cs" />
     <Compile Include="Q\CAHelper.cs" />
     <Compile Include="Net\DnsHelper.cs" />
     <Compile Include="EncryptionProvider.cs" />
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Net\Http\HttpStream.cs" />
     <Compile Include="Net\Http\_Constants.cs" />
+    <Compile Include="SocksRepeater.cs" />
     <Compile Include="_Constants.cs" />
   </ItemGroup>
   <ItemGroup>
