--- a/HttpTunnelHandler/Web.config
+++ b/HttpTunnelHandler/Web.config
@@ -6,7 +6,10 @@
   </system.web>
   <system.webServer>
     <handlers>
-      <add name="HttpStreamHandler" path="/httpstream" verb="*" type="Q.Net.Web.HttpStreamHandler" />
+      <add name="HttpTunnelHandler" path="/gate" verb="*" type="Q.Net.Web.HttpTunnelHandler" />
     </handlers>
+    <modules>
+      <add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule"/>
+    </modules>
   </system.webServer>
 </configuration>
