--- a/HttpTunnelWeb/Web.config
+++ b/HttpTunnelWeb/Web.config
@@ -6,7 +6,7 @@
   </system.web>
   <system.webServer>
     <handlers>
-      <add name="HttpTunnelHandler" path="/gate" verb="*" type="Q.Net.Web.HttpTunnelHandler" />
+      <add name="HttpTunnelHandler" path="/gateway" verb="*" type="Q.Net.Web.HttpTunnelHandler" />
     </handlers>
     <modules>
       <add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule" preCondition="integratedMode"/>
