--- a/HttpTunnelWeb/Web.config
+++ b/HttpTunnelWeb/Web.config
@@ -9,7 +9,7 @@
       <add name="HttpTunnelHandler" path="/home" verb="*" type="Q.Net.Web.HttpTunnelHandler" />
     </handlers>
     <modules>
-      <add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule" preCondition="integratedMode"/>
+      <add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule"/>
     </modules>
   </system.webServer>
 </configuration>
