--- a/HttpTunnelWeb/Web.config
+++ b/HttpTunnelWeb/Web.config
@@ -3,13 +3,14 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <sessionState mode="Off"></sessionState>
   </system.web>
   <system.webServer>
     <handlers>
-      <add name="HttpTunnelHandler" path="/home" verb="*" type="Q.Net.Web.HttpTunnelHandler" />
+      <add name="HttpTunnelHandler" path="/b" verb="*" type="Q.Net.Web.HttpTunnelHandler" />
     </handlers>
     <modules>
-      <add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule"/>
+      <!--<add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule"/>-->
     </modules>
   </system.webServer>
 </configuration>
