--- a/HttpTunnelWeb/HttpTunnelWeb.csproj
+++ b/HttpTunnelWeb/HttpTunnelWeb.csproj
@@ -11,7 +11,7 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Q.Net.Web</RootNamespace>
+    <RootNamespace>Q.Net.Web.HttpTunnel</RootNamespace>
     <AssemblyName>HttpTunnelWeb</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="HttpTunnelHandler.cs" />
     <Compile Include="HttpTunnelModule.cs" />
+    <Compile Include="HttpTunnelNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
