--- a/QProxy/QProxy.csproj
+++ b/QProxy/QProxy.csproj
@@ -39,7 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Net\Http\HttpTunnelStream.cs" />
+    <Compile Include="Net\HttpTunnelStream.cs" />
+    <Compile Include="Net\_Constants.cs" />
     <Compile Include="Q\CAHelper.cs" />
     <Compile Include="Net\DnsHelper.cs" />
     <Compile Include="EncryptionProvider.cs" />
@@ -56,7 +57,6 @@
     <Compile Include="Q\Logger.cs" />
     <Compile Include="Repeater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Net\Http\HttpStream.cs" />
     <Compile Include="Net\Http\_Constants.cs" />
     <Compile Include="SocksRepeater.cs" />
     <Compile Include="_Constants.cs" />
