--- a/HttpTunnelWeb/Web.config
+++ b/HttpTunnelWeb/Web.config
@@ -3,11 +3,12 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <sessionState mode="Off"></sessionState>
+    <sessionState mode="Off" />
   </system.web>
   <system.webServer>
     <handlers>
       <add name="HttpTunnelHandler" path="/b" verb="*" type="Q.Net.Web.HttpTunnelHandler" />
+      <add name="DebugHandler" path="/debug" verb="GET" type="Q.Net.Web.DebugHandler" />
     </handlers>
     <modules>
       <!--<add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule"/>-->
