--- a/HttpTunnelWeb/Web.config
+++ b/HttpTunnelWeb/Web.config
@@ -7,11 +7,11 @@
   </system.web>
   <system.webServer>
     <handlers>
-      <add name="HttpTunnelHandler" path="/b" verb="*" type="Q.Net.Web.HttpTunnelHandler, HttpTunnelWeb" />
+      <add name="HttpTunnelHandler" path="/tunnel" verb="*" type="Q.Net.Web.HttpTunnelHandler, HttpTunnelWeb" />
       <add name="DebugHandler" path="/debug" verb="*" type="Q.Net.Web.DebugHandler, HttpTunnelWeb" />
     </handlers>
     <modules>
-      <add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule, HttpTunnelWeb" />
+      <!--<add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule, HttpTunnelWeb" />-->
     </modules>
   </system.webServer>
 </configuration>
