--- a/HttpTunnelWeb/HttpTunnelWeb.csproj
+++ b/HttpTunnelWeb/HttpTunnelWeb.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="sysinfo.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
