Scoks & Http beta

--- a/HttpTunnelWeb/Web.config
+++ b/HttpTunnelWeb/Web.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  <appSettings>
+    <add key="TunnelTimeout" value="500"/> <!-- seconds -->
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
