--- a/HttpTunnelWeb/Web.config
+++ b/HttpTunnelWeb/Web.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="TunnelTimeout" value="500"/> <!-- seconds -->
+    <!-- TunnelTimeout seconds default(600)-->
+    <add key="TunnelTimeout" value="500"/>
+    <!-- TunnelCleanerCycle seconds default(600)-->
+    <add key="TunnelCleanerCycle" value="600"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -12,8 +15,5 @@
       <add name="HttpTunnelHandler" path="/tunnel" verb="*" type="Q.Net.Web.HttpTunnelHandler, HttpTunnelWeb" />
       <add name="DebugHandler" path="/debug" verb="*" type="Q.Net.Web.DebugHandler, HttpTunnelWeb" />
     </handlers>
-    <modules>
-      <!--<add name="HttpTunnelModule" type="Q.Net.Web.HttpTunnelModule, HttpTunnelWeb" />-->
-    </modules>
   </system.webServer>
 </configuration>
