--- a/HttpTunnelWeb/HttpTunnelWeb.csproj
+++ b/HttpTunnelWeb/HttpTunnelWeb.csproj
@@ -64,6 +64,7 @@
     <Compile Include="HttpTunnelHandler.cs" />
     <Compile Include="HttpTunnelNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleEncryptionProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
