--- a/HttpTunnelWeb/Web.config
+++ b/HttpTunnelWeb/Web.config
@@ -1,14 +1,15 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <appSettings>
     <!-- TunnelTimeout seconds default(600)-->
-    <add key="TunnelTimeout" value="500"/>
+    <add key="TunnelTimeout" value="500" />
     <!-- TunnelCleanerCycle seconds default(600)-->
-    <add key="TunnelCleanerCycle" value="600"/>
+    <add key="TunnelCleanerCycle" value="600" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <sessionState mode="Off" />
   </system.web>
   <system.webServer>
     <handlers>
