--- a/HttpTunnelWeb/Web.config
+++ b/HttpTunnelWeb/Web.config
@@ -15,6 +15,7 @@
     <handlers>
       <add name="HttpTunnelHandler" path="/tunnel" verb="*" type="Q.Net.Web.HttpTunnelHandler, HttpTunnelWeb" />
       <add name="DebugHandler" path="/debug" verb="*" type="Q.Net.Web.DebugHandler, HttpTunnelWeb" />
+      <add name="WebSocketHandler" path="/websocket" verb="*" type="Q.Net.Web.WebSocketHandler, HttpTunnelWeb" />
     </handlers>
   </system.webServer>
 </configuration>
