--- a/HttpTunnelWeb/HttpTunnelWeb.csproj
+++ b/HttpTunnelWeb/HttpTunnelWeb.csproj
@@ -65,6 +65,7 @@
     <Compile Include="HttpTunnelNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleEncryptionProvider.cs" />
+    <Compile Include="WebSocketHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
