--- a/WebServer/Web.config
+++ b/WebServer/Web.config
@@ -7,8 +7,8 @@
   </system.web>
   <system.webServer>
     <handlers>
-      <add name="HttpTunnelHandler" path="/tunnel" verb="*" type="Q.Net.Web.HttpTunnelHandler, WebServer" />
-      <add name="WebSocketHandler" path="/websocket" verb="*" type="Q.Net.Web.WebSocketHandler, WebServer" />
+      <add name="HttpTunnelHandler" path="/http" verb="*" type="Q.Net.Web.HttpTunnelHandler, WebServer" />
+      <add name="WebSocketHandler" path="/websocket" verb="*" type="Q.Net.Web.WebSocketTunnelHandler, WebServer" />
     </handlers>
   </system.webServer>
 </configuration>
