--- a/QProxy/QProxy.csproj
+++ b/QProxy/QProxy.csproj
@@ -45,14 +45,14 @@
     <Compile Include="Configuration\ConfigurationManager.cs" />
     <Compile Include="Debug\Logger.cs" />
     <Compile Include="Debug\MultiLogger.cs" />
-    <Compile Include="HttpTunnelStream.cs" />
+    <Compile Include="TunnelStreams\HttpTunnelStream.cs" />
     <Compile Include="Net\Socks\SocksConnector.cs" />
-    <Compile Include="Net\_Constants.cs" />
+    <Compile Include="TunnelStreams\_Constants.cs" />
     <Compile Include="QProxy.cs" />
     <Compile Include="Q\CAHelper.cs" />
     <Compile Include="Net\DnsHelper.cs" />
     <Compile Include="Q\SimpleEncryptionProvider.cs" />
-    <Compile Include="HttpRepeater.cs" />
+    <Compile Include="Repeaters\HttpRepeater.cs" />
     <Compile Include="Net\Http\HttpContent.cs" />
     <Compile Include="Net\Http\HttpHeader.cs" />
     <Compile Include="Net\Http\HttpHeaderItem.cs" />
@@ -64,10 +64,10 @@
     <Compile Include="Q\Extenstions.cs" />
     <Compile Include="Debug\ConsoleLogger.cs" />
     <Compile Include="Q\SingletonProvider.cs" />
-    <Compile Include="Repeater.cs" />
+    <Compile Include="Repeaters\Repeater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Net\Http\_Constants.cs" />
-    <Compile Include="SocksRepeater.cs" />
+    <Compile Include="Repeaters\SocksRepeater.cs" />
     <Compile Include="_Constants.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Configuration\config.xml" />
+    <Content Include="ExternalTools\makecert.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
