--- a/WebServer/WebServer.csproj
+++ b/WebServer/WebServer.csproj
@@ -57,14 +57,6 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </None>
-    <None Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="sysinfo.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -75,7 +67,7 @@
     <Compile Include="HttpTunnel\HttpTunnelNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleEncryptionProvider.cs" />
-    <Compile Include="WebSocketHandler.cs" />
+    <Compile Include="WebSocketTunnel\WebSocketTunnelHandler.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
